--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node_fritzbox",
+    "name": "node-fritzbox",
     "version": "0.0.0",
     "description": "node-fritzbox",
     "main": "app.js",
