--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "email": "holzig@outlook.com"
     },
     "dependencies": {
-        "moment": ">=2.8.3 <3.0.0",
-        "line-readable-stream": "=1.1.4"
+        "moment": "~2.8",
+        "byline": "~4.2"
     }
 }
