Refactor to new typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,10 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es6"
-	}
+	},
+	"exclude": [
+		"typings/browser.d.ts",
+		"typings/browser",
+		"node_modules"
+	]
 }
