--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es6"
+		"target": "es6",
+		"outDir": "dist",
+		"declaration": true
 	},
 	"exclude": [
 		"typings/browser.d.ts",
