No implicit any types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
 		"outDir": "dist",
 		"declaration": true,
 		"sourceMap": false,
-		"newLine": "LF"
+		"newLine": "LF",
+
+		"noImplicitAny": true
 	}
 }
