--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-	"editor.formatOnSave": false,
+	"editor.formatOnSave": true,
 	"editor.formatOnType": true
 }
