--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
 	"editor.formatOnSave": false,
-	"editor.formatOnType": true
+    "editor.formatOnType": true,
+    "typescript.tsdk": "./node_modules/typescript/lib"
 }
