--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"noImplicitReturns": true,
-		"strictNullChecks": true
+		"strictNullChecks": true,
+		"alwaysStrict": true
 	}
 }
