--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es6",
+		"target": "es2015",
+		"lib":[
+			"es2015"
+		],
 		"outDir": "dist",
 		"declaration": true,
 		"sourceMap": false,
