--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-
-obj/
-bin/
-*.suo
-/*.js
-*.js.map
-.ntvs*
-*.log
-
+lib/
 node_modules/
-typings/
-dist/
+.settings/
+.ideas
+*.js
+*.js.map
+*.log
