--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
 	"editor.formatOnSave": true,
 	"editor.formatOnType": true,
-	"typescript.tsdk": "./node_modules/typescript/lib"
+	"typescript.tsdk": "./node_modules/typescript/lib",
+	"editor.fontFamily": "Fira Code",
+	"editor.fontLigatures": true
 }
