--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "name": "Niklas Mollenhauer",
     "email": "nikeee@outlook.com"
   },
+  "dependencies": {
+    "byline": "^5.0.0",
+    "moment": "^2.22.2"
+  },
   "devDependencies": {
     "@types/byline": "^4.2.31",
     "rimraf": "^2.6.3",
@@ -20,9 +24,5 @@
     "compile": "tsc",
     "prepare": "npm run clean && npm run compile"
   },
-  "license": "LGPL-3.0",
-  "dependencies": {
-    "byline": "^5.0.0",
-    "moment": "^2.22.2"
-  }
+  "license": "LGPL-3.0"
 }
