--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "fritz-callmonitor",
   "version": "3.1.1",
-  "description": "Provides a node.js wrapper for the call monitor api of the AVM Fritz!Box. Written in TypeScript.",
+  "description": "Provides a TypeScript Node.js wrapper for the call monitor api of the AVM Fritz!Box.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
-  "repository": "nikeee/fritz-callmonitor",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nikeee/fritz-callmonitor"
+  },
   "author": {
     "name": "Niklas Mollenhauer",
     "email": "nikeee@outlook.com"
