--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/byline": "^4.2.31",
+    "@types/node": "^11.11.6",
     "rimraf": "^2.6.3",
     "typescript": "^3.3.3333"
   },
