--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "module": "nodenext",
-    "target": "es2015",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "target": "es2022",
     "lib": [
-      "es2015"
+      "es2024"
     ],
     "outDir": "lib",
     "declaration": true,
