--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "5.0.0",
   "description": "Provides a TypeScript Node.js wrapper for the call monitor api of the AVM Fritz!Box.",
   "main": "lib/index.js",
+  "type": "module",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
