--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "es2024"
     ],
     "outDir": "lib",
+    "erasableSyntaxOnly": true,
     "declaration": true,
     "sourceMap": false,
     "newLine": "LF",
